--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -72,8 +72,9 @@
       "l_points": "L.Points",
       "daily_roulette": "일일 룰렛",
       "determined_by": "연속 일수에 따라 결정됩니다",
-      "determined_by_tooltip1": "참여자는 매일 룰렛을 통해 보상을 받을 수 있습니다. 100 ZKL를 보유한 사용자에게는 매일 최대 X번 룰렛을 돌려 zkLink Nova 상표 NFT와 Nova 포인트를 얻을 수 있습니다. X의 값은 사용자가 로그인하여 룰렛을 돌린 연속 일수에 따라 결정되며 최대 7일입니다.",
-      "determined_by_tooltip2": "X = 연속 룰렛 가능 일수 (최대 7)",
+      "determined_by_tooltip1": "Every day, all participants can spin the roulette to earn rewards.",
+      "determined_by_tooltip2": "Users with 100+ $ZKL in their wallet can spin the roulette up to X times to win zkLink Nova Trademark NFTs and Holding Points. The value of X is determined by the number of consecutive days the user has logged in and spun the roulette, with a maximum of 7.",
+      "determined_by_tooltip3": "X = min(7, consecutive days of spinning)",
       "sun": "Sun",
       "mon": "Mon",
       "tue": "Tue",
@@ -88,7 +89,10 @@
       "daily_roulette_desc": "On a daily basis, each user has x times of opportunity to participate in a Roulette game on the campaign page. Users have the probability to win trademarks and Lynks. The minimum reward will be 1 Nova Points.",
       "check_invite_box": "Check Invite Box",
       "open_ur_invite_box": "Open Your Invite Box",
-      "invite_box_points_tooltip": "Equivalent to depositing 1 ETH into Nova for ~{{num}} days",
+      "invite_box_points_tooltip": "Equivalent to depositing 1 ETH into Nova for {{num}}",
+      "hours": "Hours",
+      "day": "day",
+      "days": "days",
       "invite_box_desc": "With each referral, users have a chance to randomly draw one of the invite rewards. Invite reward boxes are Nova Points that will be directly added to your Holdings. Please note that Holding points are not NFTs.",
       "switch_to_nova": "Switch to Nova Network To Draw",
       "invite_more_friends": "Invite More Friends",
