--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -71,9 +71,10 @@
       "allspark_points": "AllSpark Points",
       "l_points": "L.Points",
       "daily_roulette": "每日轮盘",
-      "determined_by": "由连续天数决定",
-      "determined_by_tooltip1": "参与者每天都可以通过轮盘获取奖励；对于持有 100 ZKL 的用户来说，他们每天最多可以旋转 X 次轮盘，以赢得 zkLink Nova Trademark NFT 和 Nova Points。X 的值由用户连续登录并旋转轮盘的天数决定，最大为7天。",
-      "determined_by_tooltip2": "X = 连续旋转轮盘天数（最大为7）",
+      "determined_by": "由连续抽奖天数决定",
+      "determined_by_tooltip1": "参与者每天都可以通过轮盘获取奖励；",
+      "determined_by_tooltip2": "对于持有 100 ZKL 的用户来说，他们每天最多可以旋转 X 次轮盘，以赢得 zkLink Nova Trademark NFT 和 Nova Points。X 的值由用户连续登录并旋转轮盘的天数决定，最大为7天。",
+      "determined_by_tooltip3": "X = 连续旋转轮盘天数（最大为7）",
       "sun": "Sun",
       "mon": "Mon",
       "tue": "Tue",
@@ -82,16 +83,19 @@
       "fri": "Fri",
       "sat": "Sat",
       "expired": "Expired",
-      "claim_reward": "Claim Reward",
+      "claim_reward": "领取奖励",
       "box_will_be_available": "Box will be available",
       "exactly_in": "Exactly in {{num}} Hours",
-      "daily_roulette_desc": "On a daily basis, each user has x times of opportunity to participate in a Roulette game on the campaign page. Users have the probability to win trademarks and Lynks. The minimum reward will be 1 Nova Points.",
-      "check_invite_box": "Check Invite Box",
-      "open_ur_invite_box": "Open Your Invite Box",
-      "invite_box_points_tooltip": "Equivalent to depositing 1 ETH into Nova for ~{{num}} days",
+      "daily_roulette_desc": "每天，每个用户有 x 次机会在活动页面上参与转盘游戏。用户有机会赢取 Trademarks 和 Lynks。最低奖励将是 1 个 Nova 积分。",
+      "check_invite_box": "邀请盲盒",
+      "open_ur_invite_box": "开启",
+      "invite_box_points_tooltip": "等于在 Nova 网络上持有 1 ETH {{num}}",
+      "hours": "小时",
+      "day": "天",
+      "days": "天",
       "invite_box_desc": "With each referral, users have a chance to randomly draw one of the invite rewards. Invite reward boxes are Nova Points that will be directly added to your Holdings. Please note that Holding points are not NFTs.",
-      "switch_to_nova": "Switch to Nova Network To Draw",
-      "invite_more_friends": "Invite More Friends",
+      "switch_to_nova": "切换到 Nova",
+      "invite_more_friends": "邀请更多朋友",
       "assets": "资产",
       "boosted": "额外激励",
       "holding": "持有资产",
@@ -99,22 +103,22 @@
       "perp_dex": "合约DEX",
       "lending": "Lending",
       "other": "其他",
-      "portfolio": "Portfolio",
-      "zkl_allocation_for_sector": "当前类别累积 $ZKL数量",
-      "up_to_zkl": "Up To {{num}} $ZKL",
-      "next_zkl_allocation_lv": "下一里程碑解锁 $ZKL 数量",
-      "next_zkl_allocation_lv_tooltip": "在达到下一个里程碑之后，这个类别的$ZKL 奖励分配将会达到 {{num}} 个。",
-      "total_sector_allocated_points": "当前类别积累的 Nova 总分",
-      "sector_allocated_points": "Sector Allocated Points",
-      "protocol_allocated_points": "Protocol Allocated Points",
-      "ur_allocated_points": "Your Allocated Points",
-      "by_interaction": "By Interaction",
-      "by_referral": "By Referral",
-      "ur_sector_points": "你的类别 Nova 积分",
+      "portfolio": "个人",
+      "zkl_allocation_for_sector": "{{sector}} 获得的 $ZKL 数量",
+      "up_to_zkl": "最多获得 {{num}} $ZKL",
+      "next_zkl_allocation_lv": "下一阶段解锁 $ZKL 数量",
+      "next_zkl_allocation_lv_tooltip": "该类目在达到目标后将解锁 {{num}}$ZKL",
+      "total_sector_allocated_points": "当前类目积累的 Nova 总分",
+      "sector_allocated_points": "类目积累的 Nova 总分",
+      "protocol_allocated_points": "项目积累的 Nova 分",
+      "ur_allocated_points": "你的 Nova 分",
+      "by_interaction": "通过交互",
+      "by_referral": "通过邀请",
+      "ur_sector_points": "你在当前类目获得的分数",
       "current_tvl": "当前的总锁仓量",
-      "next_tvl_milestone": "Next TVL Milestone",
-      "no_milestone_text": "This sector currently doesn't have a milestone, so the $ZKL allocation will grow contingently.",
-      "next_trading_volume_milestone": "Next Trading Volume Milestone",
+      "next_tvl_milestone": "下一个 TVL 里程碑",
+      "no_milestone_text": "这个类目目前没有里程碑，因此$ZKL的分配将会视情况而定地增加。",
+      "next_trading_volume_milestone": "下一个交易量里程碑",
       "current_trading_volume": "当前交易量",
       "token": "代币",
       "points_booster": "积分激励",
@@ -254,38 +258,38 @@
       "symbiosis_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。"
     },
     "about": {
-      "about_zklink_nova_agg": "About zkLink Nova Aggregation Parade",
-      "intro": "Introduction To The zkLink Nova Aggregation Parade",
-      "intro_desc1": "zkLink Nova is the first Aggregated Layer 3 ZK Rollup Network with EVM compatibility that’s built on top of Ethereum and multiple Ethereum Layer 2 Rollups.",
-      "intro_desc2": "The Aggregation Parade is a flagship campaign created to introduce users to the zkLink Nova platform and ecosystem, rewarding users with Nova Points, NFT rewards, and a share of $ZKL prize pools. Campaign participants earn Nova Points by interacting with zkLink Nova’s Layer 3 platform by bridging assets, engaging with zkLink Nova ecosystem DApps, referring friends, and contributing to the network’s TVL.",
-      "intro_desc3": "The Aggregation Parade has reached its second “Season.”",
-      "intro_desc4": "Season I of the Aggregation Parade concluded on May 30, 2024, 12 AM UTC – in which a snapshot of user Nova Points was taken and subsequent $ZKL was distributed.",
-      "intro_desc5": "Season II of the Aggregation Parade began on May 30, 2024, and will operate under an Epoch timeline, in which there will be at least Three Epochs.",
-      "intro_desc6": "The total prize pool for Aggregation Parade Season II will be 30 million $ZKL.",
-      "intro_desc7": "To participate in our Aggregation Parade Season II, head over to our {{campaign_portal}}",
-      "campaign_portal": "campaign portal",
-      "q1": "What is the Aggregation Parade Season 2?",
-      "a1": "Aggregation Parade Season 2 is a campaign by zkLink designed to incentivize participation within the zkLink ecosystem. Participants can earn Nova Points and NFTs (Lynks), which contribute to potential $ZKL token rewards.",
-      "q2": "When did Aggregation Parade Season 2 start",
-      "a2": "The second season of the Aggregation Parade started on May 30, 2024, at 10:00 AM UTC.",
-      "q3": "How can I earn Nova Points during Aggregation Parade Season 2?",
-      "a3": "You can earn Nova Points by actively performing transactions, holding assets, referring friends, and staking assets in DApps.",
-      "q4": "What are Nova Points and how do they benefit me?",
-      "a4": "Nova Points are rewards that participants earn for engaging with the zkLink ecosystem. Accumulating these points eables you to share the ZKL prize pools.",
-      "q5": "Is there a specific amount of ZKL tokens allocated for Aggregation Parade Season 2",
-      "a5": "3% of the total ZKL supply will be allocated to participants of Aggregation Parade Season 2.",
-      "q6": "What are the key improvements or new features introduced in Aggregation-Parade Season 2 compared to the first season?",
-      "a6": "The key improvements and features introduced in our Aggregation Parade Season II that are distinct from Season I include a newly designed and revamped dashboard, where users can view their Nova Points accumulated from their platform holdings, sector/vertical point rewards, DApp rewards, zkLink Nova native DApp booster rewards – as well as a brand new entertainment element where users can spin a daily “roulette” for surprise campaign benefits. In addition, Season II will convert user Nova Points to $ZKL at the end of each Epoch, in which there will be a total of at least three Epochs.",
-      "q7": "Can users now check how many Nova points they earn from each DApp in Season 2?",
-      "a7": "Yes. Users will be able to see their Nova Points accumulated from each DApp and the total Nova Points accumulated in a DApp’s category on the campaign dashboard. This applies across all sectors/verticals seen within the dashboard, and the DApps within them.",
-      "q8": "Where can I find more information about the Aggregation Parade and how to earn Nova Points?",
-      "a8": "You can find more details within our blog post",
-      "q9": "Is there any bonus that S1 participants can receive if they also participate in S2?(ex: points,booster)",
-      "a9": "Early participants (including S1 participants) can earn additional points by loyalty booster.",
-      "q10": "I have points from Season 1, will they be transferred In Season 2? ",
-      "a10": "Nova Points earned from Season I do not count, continue, or transfer over to Season II. Nova Points earned in Season II began on May 30, 2024, and will be calculated and converted into $ZKL at the end of each Epoch.",
-      "q11": "Can users who have minted Lynks NFTs in S1 still mint Lynk in S2 if they collect all 4 unique trademark NFTs?",
-      "a11": "Yes, you may mint additional Lynk in S2 and collect trademarks."
+      "about_zklink_nova_agg": "关于",
+      "intro": "介绍",
+      "intro_desc1": "zkLink Nova 是第一个基于以太坊和多个以太坊 Layer 2 Rollup 之上的聚合 Layer 3 ZK Rollup 网络，并且兼容 EVM",
+      "intro_desc2": "Aggregation Parade 旨在向用户介绍zkLink Nova平台和生态系统，并奖励用户Nova Points、NFT奖励和$ZKL奖池份额。活动参与者通过以下方式获得Nova Points：与zkLink Nova的Layer 3平台互动，桥接资产，参与zkLink Nova生态系统的DApps，推荐朋友，以及为网络的总锁定价值（TVL）做出贡献。",
+      "intro_desc3": "Aggregation Parade 目前开始了第二期”",
+      "intro_desc4": "Aggregation Parade 的第一季于2024年5月30日凌晨12点（UTC）结束。在此期间，对用户的Nova积分进行了快照，并随后分发了$ZKL。",
+      "intro_desc5": "Aggregation Parade 第二季于2024年5月30日开始，将采用纪元时间表，其中至少会有三个纪元",
+      "intro_desc6": "Aggregation Parade 第二季的总奖池将达到 3000 万 $ZKL。",
+      "intro_desc7": "请前往 {{campaign_portal}} 参与第二季活动",
+      "campaign_portal": "活动入口",
+      "q1": "Aggregation Parade 第二季是什么？",
+      "a1": "Aggregation Parade 第二季是 zkLink 推出的一个活动，旨在激励参与 zkLink 生态系统。参与者可以赚取 Nova Points 和 NFT（Lynks），这些都可能为他们带来 $ZKL 代币奖励。",
+      "q2": "Aggregation Parade 第二季活动什么时候开始？",
+      "a2": "Aggregation Parade 第二季于2024年5月30日10点开始。",
+      "q3": "如何在 Aggregation Parade 第二季中赚取Nova积分？",
+      "a3": "你可以通过积极进行交易、持有资产、推荐朋友以及在去中心化应用（DApps）中质押资产来赚取Nova积分。",
+      "q4": "Nova Points 是什么？它们对我有什么好处？",
+      "a4": "Nova Points 是参与者通过参与 zkLink 生态系统获得的奖励。累积这些积分可以让你分享 ZKL 奖池。",
+      "q5": "Aggregation Parade 第二季分配的 ZKL 代币数量是多少？",
+      "a5": "ZKL 总供应量的 3% 将分配给所有的参与者。",
+      "q6": "Aggregation Parade 第二季相较于第一季有哪些主要改进或新特点？",
+      "a6": "我们在 Aggregation Parade 第二季中引入了一些与第一季不同的关键改进和功能，包括全新设计和改版的界面，用户可以在其中查看他们从平台持有资产中累计的 Nova 积分、不同分类的积分奖励、DApp奖励、zkLink Nova 原生 DApp 额外奖励。",
+      "q7": "用户现在可以查看他们在第二季中从每个 DApp 中赚取了多少 Nova 点数吗？",
+      "a7": "是的。用户将能够在面板上查看他们从每个 DApp 中累计的 Nova Points 以及在 DApp 类别中的总 Nova Points。这适用于面板中看到的所有类别，以及其中的 DApp。",
+      "q8": "你可以在哪里找到关于 Aggregation Parade 以及如何获得Nova Points的更多信息？",
+      "a8": "你可以在我们的博客文章中找到更多细节。",
+      "q9": "如果S1的参与者也参与S2，他们是否可以获得额外的奖励？",
+      "a9": "早期参与者（包括S1参与者）可以通过忠诚度奖励获得额外积分。",
+      "q10": "我在第1季获得的积分会转移到第2季吗？",
+      "a10": "从第一赛季获得的 Nova Points 不会计入、继续或转移到第二赛季。第二赛季的 Nova Points 从 2024 年 5 月 30 日开始计算。",
+      "q11": "在S1中已经铸造了Lynks NFTs的用户，如果他们收集了所有4种独特的 Trademark NFT，仍然可以在S2中铸造Lynk吗？",
+      "a11": "是的，你可以在S2阶段铸造额外的Lynk，并收集 Trademark NFT。"
     }
   }
 }
