--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,14 +155,7 @@
       "mint_now": "Mint Now",
       "nova_lynks": "Nova Lynks",
       "nova_lynks_desc": "Collect ONE OF EACH of the four different types of Trademark NFTs to upgrade your SBT to Lynks.",
-      "oak_tree_roots": "Oak Tree Roots",
-      "oak_tree_roots_desc": "You can earn Oak Tree Roots by participating in the daily roulette or purchasing from OKX",
-      "magnifying_glass": "Magnifying Glass",
-      "magnifying_glass_desc": "You can earn Magnifying Glass by participating in the daily roulette or purchasing from OKX",
-      "chess_knight": "Chess Knight",
-      "chess_knight_desc": "You can earn Chess Knight by participating in the daily roulette or purchasing from OKX",
-      "binary_code_metrix_cube": "Binary Code Metrix Cube",
-      "binary_code_metrix_cube_desc": "You can earn Binary Code Metrix Cube by participating in the daily roulette or purchasing from OKX",
+      "eran_nft_by_participating": "You can earn {{name}} by participating in the daily roulette or purchasing from OKX",
       "buy_from_okx": "Buy From OKX",
       "booster": "Booster",
       "description": "Description",
