--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -96,12 +96,12 @@
       "invite_box_desc": "With each referral, users have a chance to randomly draw one of the invite rewards. Invite reward boxes are Nova Points that will be directly added to your Holdings. Please note that Holding points are not NFTs.",
       "switch_to_nova": "切换到 Nova",
       "invite_more_friends": "邀请更多朋友",
-      "assets": "资产",
-      "boosted": "额外激励",
+      "assets": "持有资产",
+      "boosted": "额外奖励",
       "holding": "持有资产",
-      "spot_dex": "Spot DEX",
-      "perp_dex": "合约DEX",
-      "lending": "Lending",
+      "spot_dex": "现货 DEX",
+      "perp_dex": "合约 DEX",
+      "lending": "借贷",
       "other": "其他",
       "portfolio": "个人",
       "zkl_allocation_for_sector": "{{sector}} 获得的 $ZKL 数量",
@@ -136,57 +136,50 @@
       "boost_num": "{{booster}} boost",
       "up_to_booster": "Up to {{booster}}",
       "how_to_earn": "How to Earn",
-      "ur_nova_points": "Your Nova Points",
-      "assets_points": "Assets Points",
-      "native_boost_points": "Native Boost Points",
-      "spot_dex_points": "Spot DEX Points",
-      "perp_dex_points": "Perp DEX Points",
-      "lending_points": "Lending Points",
-      "other_points": "Other Points",
-      "earned_by_holding": "Earned by holding",
-      "earned_by_referral": "Earned by Referral",
-      "earned_by_other": "Earned by Other Activities",
-      "earned_by_participate": "Earned by participate in Sector",
-      "earn_more": "Earn More",
-      "ur_project_points": "Your Project Points",
+      "ur_nova_points": "你的 Nova 分数",
+      "assets_points": "资产 Nova 分数",
+      "native_boost_points": "额外奖励 Nova 分数",
+      "spot_dex_points": "现货 DEX Nova 分数",
+      "perp_dex_points": "合约 DEX Nova 分数",
+      "lending_points": "借贷 Nova 分数",
+      "other_points": "其它 Nova 分数",
+      "earned_by_holding": "通过持有获取的 Nova 分数",
+      "earned_by_referral": "通过邀请获取的 Nova 分数",
+      "earned_by_other": "通过其它行为获取的 Nova 分数",
+      "earned_by_participate": "通过参与获取的 Nova 分数",
+      "earn_more": "获取更多",
+      "ur_project_points": "其它项目分数",
       "hide_points": "Hide Points < 0.1",
       "ur_nfts": "Your NFTs",
       "nova_sbt": "Nova SBT",
-      "nova_sbt_desc": "Users who deposit a minimum amount of 0.1 ETH or equivalent can mint a zkLink Nova SBT.",
+      "nova_sbt_desc": "用户质押超过 0.1 ETH 或等值资产后，可以铸造 Nova SBT",
       "mint_now": "Mint Now",
       "nova_lynks": "Nova Lynks",
-      "nova_lynks_desc": "Collect ONE OF EACH of the four different types of Trademark NFTs to upgrade your SBT to Lynks.",
-      "oak_tree_roots": "Oak Tree Roots",
-      "oak_tree_roots_desc": "You can earn Oak Tree Roots by participating in the daily roulette or purchasing from OKX",
-      "magnifying_glass": "Magnifying Glass",
-      "magnifying_glass_desc": "You can earn Magnifying Glass by participating in the daily roulette or purchasing from OKX",
-      "chess_knight": "Chess Knight",
-      "chess_knight_desc": "You can earn Chess Knight by participating in the daily roulette or purchasing from OKX",
-      "binary_code_metrix_cube": "Binary Code Metrix Cube",
-      "binary_code_metrix_cube_desc": "You can earn Binary Code Metrix Cube by participating in the daily roulette or purchasing from OKX",
+      "nova_lynks_desc": "收集四种不同类型的 Trademark NFT，以升级您的 SBT 为 Lynks ",
+      "eran_nft_by_participating": "可以通过每日轮盘获得或直接在 OKX 购买",
       "buy_from_okx": "Buy From OKX",
       "booster": "Booster",
       "description": "Description",
       "provide_liquidity": "Provide Liquidity",
       "trade": "Trade",
       "novaswap_booster": "10x for Merged wBTC, wETH, USDT",
-      "eco_dapp_desc": "You earn points based on the liquidity you've supplied to the pool over a specific period, with the points multiplied accordingly.",
+      "eco_dapp_desc": "特定时期内根据你向池子提供的流动性获得积分，并按相应的倍数进行积分计算",
       "warning": "WARNING",
-      "acdess_3rd_website": "You are about to access a third-party website. Please do your own research (DYOR) and avoid engaging in unfamiliar activities. Please note that zkLink and its affiliates are not liable for any losses, damages, or other consequences arising from your use of third-party websites.",
-      "recognize": "I recognize the risks and will take responsibility for actions on third-party websites.",
-      "continute_to_access": "Continute to Access",
+      "acdess_3rd_website": "您即将访问一个第三方网站。请自行研究（DYOR）并避免从事不熟悉的活动。请注意，zkLink及其关联公司对您使用第三方网站所产生的任何损失、损害或其他后果不承担任何责任",
+      "recognize": "我清楚的明白存在风险，并将对在第三方网站上的行为承担责任",
+      "continute_to_access": "访问",
       "izumi_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
       "izumi_booster_2": "3x for externally bridged tokens (solvBTC.m)",
       "izumi_booster_3": "Note: Boosts are provided only for effective liquidity. For AMM DEX, two-sided liquidity provision is required to qualify for the dApp booster.",
       "wagmi_booster_1": "10x for Merged wBTC, wETH, USDT",
       "wagmi_booster_2": "1 point / $200 volume",
-      "wagmi_trade_desc": "For every $200 in trading volume on Wagmi, you will receive 1 Nova Point.",
+      "wagmi_trade_desc": "在 Wagmi 平台上，每交易200美元，你将获得1个Nova积分。",
       "logx_booster_1": "10x points for LPs providing USDT",
       "logx_booster_2": "1 point / $200 volume",
-      "logx_trade_desc": "For every $1000 in trading volume on LogX, you will receive 1 Nova Point.",
+      "logx_trade_desc": "在 LogX 平台上，每交易200美元，你将获得1个Nova积分。",
       "zkdx_booster_1": "10x for Merged ETH, USDC",
       "zkdx_booster_2": "1 point / $200 volume",
-      "zkdx_trade_desc": "For every $200 in trading volume on zkDX, you will receive 1 Nova Point.",
+      "zkdx_trade_desc": "每交易 $200，您将获得 1 个 Nova 点",
       "layerbank_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
       "layerbank_booster_2": "4x for canonically bridged tokens (pufETH.eth, Manta.manta, Stone.manta, wBTC.eth)",
       "layerbank_booster_3": "2x for externally bridged tokens (solvBTC.m, mBTC, BTCT)",
@@ -195,20 +188,20 @@
       "native_lend_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
       "native_lend_booster_2": "4x for canonically bridged tokens",
       "allspark_booster_1": "1 points per trade",
-      "allspark_desc": "For each transaction you make with Allspark, you can receive 0.5 Nova Points.",
+      "allspark_desc": "在 Allspark 平台上，每发送一笔交易，你将获得1个Nova积分。",
       "rubic_booster_1": "1 points per trade",
-      "rubic_desc": "For each transaction you make with Rubic, you can receive 1 Nova Point.",
+      "rubic_desc": "在 Rubic 平台上，每交易200美元，你将获得1个Nova积分。",
       "interport_booster_1": "10x for merged USDT and USDC",
-      "interport_desc": "For each block that liquidity is in a pool you earn points multiplied by the liquidity you provided",
+      "interport_desc": "你将获得由你提供的流动性价值乘以 Booster 的积分",
       "orbiter_booster_1": "5 Nova Points",
-      "orbiter_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。",
+      "orbiter_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "orbiter_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC+10:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
-      "symbiosis_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。",
+      "symbiosis_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "symbiosis_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC 0:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
-      "meason_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。",
+      "meason_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "meason_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC 0:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
       "eddy_booster_1": "1 point / $200 volume",
-      "eddy_desc": "For every $200 in trading volume on Eddy Finance (Nova Network), you will receive 1 Nova Point.",
+      "eddy_desc": "在 Eddy Finance 平台上，每交易200美元，你将获得1个Nova积分。",
       "eco_interaction": "Interaction",
       "eco_bridge": "Bridge",
       "eco_trading": "Trading"
@@ -251,11 +244,11 @@
       "free": "Free",
       "free_desc": "桥接比特币资产以赚取Nova积分",
       "orbiter_finance": "Orbiter Finance",
-      "orbiter_finance_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。",
+      "orbiter_finance_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "meson_finance": "Meson Finance",
-      "meson_finance_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。",
+      "meson_finance_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "symbiosis": "Symbiosis",
-      "symbiosis_desc": "将超过0.1 ETH/500USDT/500 USDC价值的代币桥接到Nova主网以赚取Nova积分。"
+      "symbiosis_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分"
     },
     "about": {
       "about_zklink_nova_agg": "关于",
