--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -11,6 +11,7 @@
       "novadrop": "NovaDrop",
       "leaderboard": "排行榜",
       "bridge": "跨链桥",
+      "governance": "治理",
       "about": "关于",
       "useful_tools": "小工具",
       "merge_token": "Merge Token",
@@ -60,6 +61,7 @@
       "total_prize_pool": "总奖池",
       "the_30_million_$zkl": "这 3,000 万 $ZKL 将在至少3个 Epoch 发放给用户",
       "epoch_one_form": "Epoch 1（五月三十号至七月15号）",
+      "epoch_two_form": "Epoch 2（七月十六号至八月三十一号）",
       "all_supported_points": "所有支持获取的积分",
       "nova_points": "Nova Points",
       "linea_lxp_l": "Linea LXP-L",
@@ -102,6 +104,7 @@
       "spot_dex": "现货 DEX",
       "perp_dex": "合约 DEX",
       "lending": "借贷",
+      "gamefi": "游戏",
       "other": "其他",
       "portfolio": "个人",
       "zkl_allocation_for_sector": "{{sector}} 获得的 $ZKL 数量",
@@ -248,16 +251,17 @@
       "meson_finance": "Meson Finance",
       "meson_finance_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
       "symbiosis": "Symbiosis",
-      "symbiosis_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分"
+      "symbiosis_desc": "将超过 0.1 ETH / 500 USDT / 500 USDC 桥接到 Nova，以赚取 Nova 积分",
+      "third_party_bridge": "三方桥"
     },
     "about": {
       "about_zklink_nova_agg": "关于",
       "intro": "介绍",
       "intro_desc1": "zkLink Nova 是第一个基于以太坊和多个以太坊 Layer 2 Rollup 之上的聚合 Layer 3 ZK Rollup 网络，并且兼容 EVM",
       "intro_desc2": "Aggregation Parade 旨在向用户介绍zkLink Nova平台和生态系统，并奖励用户Nova Points、NFT奖励和$ZKL奖池份额。活动参与者通过以下方式获得Nova Points：与zkLink Nova的Layer 3平台互动，桥接资产，参与zkLink Nova生态系统的DApps，推荐朋友，以及为网络的总锁定价值（TVL）做出贡献。",
-      "intro_desc3": "Aggregation Parade 目前开始了第二期”",
+      "intro_desc3": "Aggregation Parade 目前开始了第二期",
       "intro_desc4": "Aggregation Parade 的第一季于2024年5月30日凌晨12点（UTC）结束。在此期间，对用户的Nova积分进行了快照，并随后分发了$ZKL。",
-      "intro_desc5": "Aggregation Parade 第二季于2024年5月30日开始，将采用纪元时间表，其中至少会有三个纪元",
+      "intro_desc5": "Aggregation Parade 第二季于2024年5月30日开始，将分为多个活动时段开展，每个时段为期6周。",
       "intro_desc6": "Aggregation Parade 第二季的总奖池将达到 3000 万 $ZKL。",
       "intro_desc7": "请前往 {{campaign_portal}} 参与第二季活动",
       "campaign_portal": "活动入口",
@@ -272,7 +276,7 @@
       "q5": "Aggregation Parade 第二季分配的 ZKL 代币数量是多少？",
       "a5": "ZKL 总供应量的 3% 将分配给所有的参与者。",
       "q6": "Aggregation Parade 第二季相较于第一季有哪些主要改进或新特点？",
-      "a6": "我们在 Aggregation Parade 第二季中引入了一些与第一季不同的关键改进和功能，包括全新设计和改版的界面，用户可以在其中查看他们从平台持有资产中累计的 Nova 积分、不同分类的积分奖励、DApp奖励、zkLink Nova 原生 DApp 额外奖励。",
+      "a6": "我们在 Aggregation Parade 第二季中引入了一些与第一季不同的关键改进和功能，包括全新设计和改版的界面，用户可以在其中查看通过持有资产，在DApp中质押资产，与DApp交互等方式获得的各类积分奖励。",
       "q7": "用户现在可以查看他们在第二季中从每个 DApp 中赚取了多少 Nova 点数吗？",
       "a7": "是的。用户将能够在面板上查看他们从每个 DApp 中累计的 Nova Points 以及在 DApp 类别中的总 Nova Points。这适用于面板中看到的所有类别，以及其中的 DApp。",
       "q8": "你可以在哪里找到关于 Aggregation Parade 以及如何获得Nova Points的更多信息？",
