--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
       "novadrop": "NovaDrop",
       "leaderboard": "Leaderboard",
       "bridge": "Bridge",
+      "governance": "Governance",
       "about": "About",
       "useful_tools": "Useful Tools",
       "merge_token": "Merge Token",
@@ -60,6 +61,7 @@
       "total_prize_pool": "Total Prize Pool",
       "the_30_million_$zkl": "The 30 million $ZKL will be distributed over at least Three Epochs.",
       "epoch_one_form": "Epoch One (From May 30th to July 15th)",
+      "epoch_two_form": "Epoch Two (From July 16th to Aug 31st)",
       "all_supported_points": "All Supported Points",
       "nova_points": "Nova Points",
       "linea_lxp_l": "Linea LXP-L",
@@ -102,6 +104,7 @@
       "spot_dex": "Spot DEX",
       "perp_dex": "Perp DEX",
       "lending": "Lending",
+      "gamefi": "GameFi",
       "other": "Other",
       "portfolio": "Portfolio",
       "zkl_allocation_for_sector": "$ZKL Allocation For {{sector}}",
@@ -248,7 +251,8 @@
       "meson_finance": "Meson Finance",
       "meson_finance_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
       "symbiosis": "Symbiosis",
-      "symbiosis_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points."
+      "symbiosis_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "third_party_bridge": "Third Party Bridge"
     },
     "about": {
       "about_zklink_nova_agg": "About zkLink Nova Aggregation Parade",
