update epoch 2 time

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,7 +61,7 @@
       "total_prize_pool": "Total Prize Pool",
       "the_30_million_$zkl": "The 30 million $ZKL will be distributed over at least Three Epochs.",
       "epoch_one_form": "Epoch One (From May 30th to July 15th)",
-      "epoch_two_form": "Epoch Two (From July 16th)",
+      "epoch_two_form": "Epoch Two (From July 16th to Aug 31st)",
       "all_supported_points": "All Supported Points",
       "nova_points": "Nova Points",
       "linea_lxp_l": "Linea LXP-L",
