--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -61,7 +61,7 @@
       "total_prize_pool": "총 상금 풀",
       "the_30_million_$zkl": "3천만 $ZKL은 최소 3번의 Epoch 동안 배포됩니다",
       "epoch_one_form": "Epoch 1 (5월 30일 부터 7월 15일까지)",
-      "epoch_two_form": "Epoch 2 (7월 16일)",
+      "epoch_two_form": "Epoch 2 (7월 16일 부터 8월 31일까지)",
       "all_supported_points": "지원되는 모든 포인트",
       "nova_points": "Nova Points",
       "linea_lxp_l": "Linea LXP-L",
